[package]
name = "dupe-snipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.21"
num_cpus = "1.16.0"
sha3 = "0.10.8"
tokio = { version = "1.36.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }